# user-manifest

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
chart/user-manifest/: Chart.yaml  values.yaml
chart/user-manifest/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
chart/user-manifest/templates/tests/: test-connection.yaml
src/: main.rs
src/controller/: grant_controller.rs  mod.rs  permission_controller.rs  rbac_controller.rs  rbac_grant.rs
src/endpoints/: grants.rs  health.rs  mod.rs  output_types.rs  permissions.rs  structs.rs  users.rs
