[package]
name = "user-manifest"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = {version = "0.73.1", features = ["runtime"] }
k8s-openapi = { version = "0.15.0", features = ["v1_23"]}
actix-web = { version = "4.1.0", features = ["openssl"]}
openssl = { version = "0.10.46", features = ["v110"]}
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.17"
